<resources xmlns:tools="http://schemas.android.com/tools">

    <string-array name="semester">
        <item>first</item>
        <item>second</item>
        <item>third</item>
        <item>fourth</item>
        <item>fifth</item>
        <item>sixth</item>
        <item>seventh</item>
        <item>eighth</item>
    </string-array>

    <string-array name="dept">
        <item>CSE</item>
        <item>IT</item>
        <item>ET&amp;T</item>
        <item>MECH</item>
        <item>MINING</item>
        <item>ELECTRICAL</item>
        <item>CIVIL</item>
    </string-array>

    <string name="app_name">EdRoom</string>
    <string name="title">Title</string>
    <string name="this_is_a_short_description_about_the_notice">This is a short description about the notice</string>
    <string name="read_details">Read Details</string>
    <string name="happy_to_see_you_again">Happy to see you again</string>
    <string name="welcome">Welcome</string>
    <string name="account">Account</string>
    <string name="create">Create</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="register"><u>Register</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot">Forgot</string>
    <string name="user_details">User Details</string>
    <string name="full_name">Full Name</string>
    <string name="department">Department</string>
    <string name="roll_number">Roll Number</string>
    <string name="semester">Semester</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="first">first</string>
    <string name="resources">Resources</string>
    <string name="resource_name">Resource Name</string>
    <string name="resource_category">Resource Category</string>
    <string name="long_desc">One important aspect of communication is business communication, also known as formal communication. Formal letters, memos, circulars etc are all forms of business communication. Another important tool of the same is a notice. Let us learn the meaning of notices and details of notice-writing.One important aspect of communication is business communication, also known as formal communication. Formal letters, memos, circulars etc are all forms of business communication. Another important tool of the same is a notice. Let us learn the meaning of notices and details of notice-writing.One important aspect of communication is business communication, also known as formal communication. Formal letters, memos, circulars etc are all forms of business communication. Another important tool of the same is a notice. Let us learn the meaning of notices and details of notice-writing.</string>
    <string name="title_activity_doubt_corner">DoubtCornerActivity</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="user_department">User Department</string>
    <string name="update">Update</string>
    <string name="_123456789">123456789</string>
    <string name="third">Third</string>
    <string name="doubt_corner">Doubt Corner</string>
    <string name="AddDoubt">Add Doubt</string>
    <string name="view_profile">View Profile</string>
    <string name="attendance">Attendance</string>
    <string name="notice_board">Notice Board</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="number">0123456789</string>
    <string name="by">By:</string>
    <string name="this_is_short_description_of_your_doubt">This is Short Description of your Doubt.</string>
    <string name="view_more">View More</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="doubt_subject">Doubt Subject</string>
    <string name="doubt_chapter">Doubt Chapter</string>
    <string name="answer">Answer:</string>
    <string name="count">Count</string>
    <string name="ask_your_doubt">Ask Your Doubt?</string>
    <string name="enter_your_doubt_title">Enter your Doubt Title</string>
    <string name="subject">Subject</string>
    <string name="chapter">Chapter</string>
    <string name="enter_your_doubt_description">Enter your Doubt Description…</string>
    <string name="preference_file_name">userName</string>
    <string name="unique_code">Unique Code</string>
    <string name="you_are">You are :</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="zero">0</string>
    <string name="newAttendance">New</string>
    <string name="EditAttendance">Edit</string>
    <string name="jan_01_2022">JAN 01 2022</string>
    <string name="total_attendance">Total Attendance</string>
    <string name="score">Score</string>
    <string name="recent"><u>Recent</u></string>
    <string name="item">item</string>
    <string name="done">Done</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="search_resources">Search Resources …</string>
    <string name="resource_not_found">Resource Not Found…</string>
    <string name="addResources">AddResources</string>
    <string name="course">Course</string>
    <string name="pdf">Pdf</string>
    <string name="request_contribute_resources">Request/Contribute Resources</string>
    <string name="addRequestResourceUrl" tools:ignore="Typos">https://docs.google.com/forms/d/e/1FAIpQLSdCmN-Ndub0bMbcz38jjfmopWEVVBk4FcIBfe1MxCmvPApCvA/viewform</string>
    <string name="addNotice">addNotice</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="add_notice">Add Notice</string>
    <string name="notice_title">Notice Title</string>
    <string name="write_notice_description">Write Notice Description</string>
    <string name="please_select_an_image">Please select an Image…</string>
    <string name="image_uploading">Image Uploading…</string>
    <string name="delete">Delete</string>
    <string name="search_doubts">Search Doubts…</string>
    <string name="please_click_on_the_image_upload_button_first">Please click on the image upload button first…</string>
    <string name="my_doubts">My Doubts</string>
    <string name="your_answer">Your Answer</string>
    <string name="enter_your_answer">Enter your answer…</string>
    <string name="image">Image</string>
    <string name="__answers">Answers :</string>
    <string name="add_answer">Add Answer</string>
    <string name="has_not_answered_yet">has not answered yet…</string>
    <string name="onBoarding1_title">Attendance</string>
    <string name="onBoarding1_text">Manage attendance easily, Also get the attendance percentage </string>
    <string name="onBoarding2_title">Doubt Corner</string>
    <string name="onBoarding2_text">Ask any doubt anytime regarding college activities, study, notices, etc.</string>
    <string name="onBoarding3_title">Resources</string>
    <string name="onBoarding3_text">Search and download notes, add relevant tags and upload your notes.</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>
    <string name="percent">Percent</string>
    <string name="total_percentage">Total %</string>
    <string name="attendance_report"><u>Attendance Report</u></string>
    <string name="attendance_not_taken_yet">Attendance Not Taken Yet...</string>
    <string name="at_least_one_class_of_each_subject_is_needed_to_show_this_data">At least one class of each subject is needed to show this data.</string>
</resources>