<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:backgroundTint="@color/dark_blue">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewNotice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- Title-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvDoubtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Created By , Date , Time-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/by"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/grey"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvDoubtCreatedBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/name"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/grey"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvDoubtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:text="@string/time"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/grey"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- Subject , Chapter-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="5">

                <TextView
                    android:id="@+id/tvDoubtSubject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:text="@string/doubt_subject"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/grey"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvDoubtChapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:text="@string/doubt_chapter"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/grey"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- Short Description of Doubt-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvDoubtDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:scrollHorizontally="false"
                    android:text="@string/this_is_short_description_of_your_doubt"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <!-- Title-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDoubtAnswerCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/count"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDoubtDetails"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:backgroundTint="@color/dark_blue"
                    android:text="@string/view_more"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</com.google.android.material.card.MaterialCardView>